@@ -1,3 +1,7 @@
+2001-03-09  Per Bothner  <per@bothner.com>
+
+	* strings.scm:  Add lots of type declarations, mostly for return type.
+
 2001-03-08  Per Bothner  <per@bothner.com>
 
 	* lists.scm (list-tail, list-ref, list?):  New procedures.
